--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     -->
   <!-- FontAwesome Icon CDN-->
   <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>PayShare</title>
 </head>
 
